Updates following EL code review

--- a/README.html
+++ b/README.html
@@ -354,7 +354,7 @@ display: none;
 
 <div id="mct_fly_val_public" class="section level1">
 <h1>MCT_Fly_Val_public</h1>
-<p>Code and raw data to support Terry (2024) <em>Experimental validation
+<p>Code and raw data to support Terry (2025) <em>Experimental validation
 of ecological coexistence theory to forecast extirpation under rising
 temperatures.</em></p>
 </div>
@@ -410,12 +410,14 @@ generation</li>
 replicate values.</li>
 <li><code>TUBE_ID</code> Unique tube ID, 1001:3400</li>
 </ul>
-<p>It relates to <code>TubeDoc_CC3_ALL.csv</code> via
-<code>Gen</code>,<code>IncubTemp</code>,<code>LINE_ID</code> &amp;
-<code>TUBE_ID</code>.</p>
-<p>It also has columns detailing counts of each sex of each species
+<p><code>TubeDoc_CC3_ForDataEntry.csv</code> has columns detailing
+counts of each sex of each species
 <code>PAL_FEMALE</code>,<code>PAL_MALE</code>,<code>PAN_FEMALE</code>,<code>PAN_MALE</code>.
 Blank entries are zeros.</p>
+<p><code>TubeDoc_CC3_ALL.csv</code> relates to
+<code>TubeDoc_CC3_ForDataEntry.csv</code> via
+<code>Gen</code>,<code>IncubTemp</code>,<code>LINE_ID</code> &amp;
+<code>TUBE_ID</code>.</p>
 <p><code>Tables</code> and <code>Figures</code> both hold outputs from
 the analysis documents</p>
 <p><code>ProcessedData/</code> Includes dataframes with data wrangled
@@ -433,8 +435,10 @@ which may help resolve any future package mystery.</p>
 <div id="licensing" class="section level1">
 <h1>Licensing:</h1>
 <p>Code available for free reuse without restriction or warranty. Data
-may be freely reused with attribution (ideally citing the paper.
-Preprint: <a href="https://doi.org/10.1101/2024.02.22.581553" class="uri">https://doi.org/10.1101/2024.02.22.581553</a>).</p>
+may be freely reused with attribution (ideally citing the paper: Terry
+(2025) “An experimental validation test of ecological coexistence theory
+to forecast extinction under rising temperatures” <em>Ecology
+Letters</em> . Preprint: <a href="https://doi.org/10.1101/2024.02.22.581553" class="uri">https://doi.org/10.1101/2024.02.22.581553</a>).</p>
 </div>
 
 
